<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/ad">
        <menu>
            <item android:title="@string/ad_my_ads"
                android:id="@+id/ad_my_ads"
            />

            <item android:title="@string/ad_cars"
                android:id="@+id/ad_cars"
                />

            <item android:title="@string/ad_pc"
                android:id="@+id/ad_pc"
                />

            <item android:title="@string/ad_smartphone"
                android:id="@+id/ad_smartphone"
                />

            <item android:title="@string/ad_dm"
                android:id="@+id/ad_dm"
                />
        </menu>

    </item>

    <item android:title="@string/ad_ac">
        <menu>
            <item android:title="@string/ad_sign_in"
                android:id="@+id/ad_sign_in"
                />

            <item android:title="@string/ad_sign_up"
                android:id="@+id/ad_sign_up"
                />

            <item android:title="@string/ad_registration"
                android:id="@+id/ad_registration"
                />

        </menu>

    </item>

</menu>